Updates to user forms

--- a/src/main/resources/public/assets/css/utility/style.css
+++ b/src/main/resources/public/assets/css/utility/style.css
@@ -825,3 +825,8 @@ div.measurement-value .delta > .sign {
 #form-profile .form-group > label:after {
   content: ":";
 }
+
+/* Leaflet */
+.leaflet-popup-content-wrapper {
+    border-radius: 0px;
+}
