--- a/src/main/resources/public/assets/css/home.css
+++ b/src/main/resources/public/assets/css/home.css
@@ -121,6 +121,13 @@
 	color: #7AD3AB;
 }
 
+.dash:after{
+  margin-left: 5px;
+  margin-right: 5px;
+  font-weight: bold;
+  font-size: 1.3em;
+  content: '-';
+}
 /* Generic */
 
 body {
