Add password reset form
Added new form for resetting user password.

--- a/src/main/resources/templates/utility/default.html
+++ b/src/main/resources/templates/utility/default.html
@@ -42,7 +42,13 @@
 <script th:inline="javascript">
     var properties = {
         reload: [[${reload}]],
-       	locale: 'en'
+       	locale: 'en',
+       	captchaKey: [[${googleReCAPTCHASiteKey}]]
+    };
+
+
+    var recaptchaOptions = {
+      lang: [[${locale}]]
     };
 </script>
 </head>
