--- a/src/main/resources/mail/templates/survey-es.html
+++ b/src/main/resources/mail/templates/survey-es.html
@@ -34,12 +34,11 @@ a.reset {
 	display: inline-block;
 	padding: 6px 12px;
 	margin-bottom: 0;
-	font-size: 30px;
+	font-size: 17px;
 	font-weight: 400;
 	font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
 	line-height: 1.42857143;
 	text-align: center;
-	white-space: nowrap;
 	vertical-align: middle;
 	-ms-touch-action: manipulation;
 	touch-action: manipulation;
@@ -79,35 +78,43 @@ div.footer p {
 		</div>
 
 		<div class="inner-content">
-
 			<p>
-				Hi <span th:text="${model.user.firstname}">{firstname}</span>,
+				Estimado <span th:text="${model.account.firstname}">{firstname}</span>,
 			</p>
-
-			<p>we have received a request to reset your DAIAD password.
-				Follow the link below to enter your new password.</p>
-
-			<br />
-
+			<p>
+				¡Muchas gracias por ser parte del piloto DAIAD!
+			</p>
+			<p>
+				Tu participación e interés nos ayudan a mejorar DAIAD, ofreciendo experiencias más interesantes  y mejorando la eficiencia del agua en el mundo. Cuantos más comentarios nos hagas, más podremos mejorar.
+			</p>
+			<p>
+				Por tanto, nos gustaría que completaras este pequeño formulario de satisfacción acerca del DAIAD:
+			</p>
 			<div style="text-align: center;">
-				<a class="reset" th:href="${model.url}"> <span>Reset
-						password</span>
+				<a class="reset" th:href="|https://docs.google.com/forms/d/e/1FAIpQLSdHgCsEOX740zOxDFA2K47XQHN69MZ676y7CMQ6s8FaUt9J7Q/viewform?entry.1415124665=${model.account.username}&amp;entry.33578227|">
+					<span>Comenzar formulario</span>
 				</a>
 			</div>
-
-			<br />
-
-			<p>If you choose to ignore this message, your password won't be
-				changed.</p>
-
 			<p>
-				Best regards,<br /> The DAIAD team
+				No necesitarás más de 5 minutos, y nos permitirá obtener información importante acerca de tus impresiones y percepciones sobre el DAIAD.
 			</p>
-			<div class="footer">
-				<p>
-					Learn more about DAIAD <a href="http://www.daiad.eu">here</a>
-				</p>
-			</div>
+			<p>
+				¡Muchas gracias de nuevo por ser parte de la familia DAIAD!
+			</p>
+			<br />
+			<p>
+				Un cordial saludo,
+			</p>
+			<p>
+				El equipo DAIAD
+			</p>
+			<br />
+			<p>
+				Democratizing Water Consumption Monitoring
+			</p>
+			<p>
+				<a href="http://www.daiad.eu">www.daiad.eu</a>
+			</p>
 		</div>
 	</div>
 </body>
