--- a/src/main/resources/mail/templates/password-reset-mobile-en.html
+++ b/src/main/resources/mail/templates/password-reset-mobile-en.html
@@ -69,7 +69,7 @@ div.footer p {
     <div class="content">
         <div class="header">
             <img alt="DAIAD"
-                src="http://192.168.1.50:8888/assets/images/shared/daiad-logo.svg"
+                src="https://app.dev.daiad.eu/assets/images/shared/daiad-logo.svg"
                 style="margin-top: 15px;" />
         </div>
 
