--- a/src/main/resources/mail/templates/survey-el.html
+++ b/src/main/resources/mail/templates/survey-el.html
@@ -34,12 +34,11 @@ a.reset {
 	display: inline-block;
 	padding: 6px 12px;
 	margin-bottom: 0;
-	font-size: 30px;
+	font-size: 17px;
 	font-weight: 400;
 	font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
 	line-height: 1.42857143;
 	text-align: center;
-	white-space: nowrap;
 	vertical-align: middle;
 	-ms-touch-action: manipulation;
 	touch-action: manipulation;
@@ -79,35 +78,43 @@ div.footer p {
 		</div>
 
 		<div class="inner-content">
-
 			<p>
-				Hi <span th:text="${model.user.firstname}">{firstname}</span>,
+				Dear <span th:text="${model.account.firstname}">{firstname}</span>,
 			</p>
-
-			<p>we have received a request to reset your DAIAD password.
-				Follow the link below to enter your new password.</p>
-
-			<br />
-
+			<p>
+				Thank you for being part of the DAIAD Trial!
+			</p>
+			<p>
+				Your continued feedback and support helps us improve DAIAD, offer more exciting services, and increase water efficiency across the world. And the more of your feedback we get, the more we can improve!
+			</p>
+			<p>
+				We would kindly ask you to complete this very short Satisfaction Survey for DAIAD:
+			</p>
 			<div style="text-align: center;">
-				<a class="reset" th:href="${model.url}"> <span>Reset
-						password</span>
-				</a>
+				<a class="reset" th:href="|https://docs.google.com/forms/d/e/1FAIpQLScooOkKYZiyYr6ECv-hZ2JKzG4fL9ytUs692d5CRv3avbC2ow/viewform?entry.1415124665=${model.account.username}&amp;entry.33578227|">
+					<span>Start Survey</span>
+				</a>				
 			</div>
-
-			<br />
-
-			<p>If you choose to ignore this message, your password won't be
-				changed.</p>
-
 			<p>
-				Best regards,<br /> The DAIAD team
+				You will only need less than 5min, but it will allow us to collect critical information concerning your impressions and perceptions of DAIAD.
 			</p>
-			<div class="footer">
-				<p>
-					Learn more about DAIAD <a href="http://www.daiad.eu">here</a>
-				</p>
-			</div>
+			<p>
+				Thank you once again for being part of the DAIAD family!
+			</p>
+			<br />
+			<p>
+				Kind Regards,
+			</p>
+			<p>
+				The DAIAD Team
+			</p>
+			<br />
+			<p>
+				Democratizing Water Consumption Monitoring
+			</p>
+			<p>
+				<a href="http://www.daiad.eu">www.daiad.eu</a>
+			</p>
 		</div>
 	</div>
 </body>
