support multiple queries on server

--- a/src/main/resources/templates/utility/default.html
+++ b/src/main/resources/templates/utility/default.html
@@ -23,6 +23,7 @@
 <link href="/assets/lib/react-bootstrap-datetimepicker/bootstrap-datetimepicker.css" rel="stylesheet" />
 <link href="/assets/lib/react-grid-layout/styles.css" rel="stylesheet" />
 <link href="/assets/lib/font-awesome/css/font-awesome.min.css" rel="stylesheet" />
+<link href="/assets/lib/rc-switch/index.css" rel="stylesheet" />
 
 <link href="/assets/css/site.css" rel="stylesheet" />
 <link href="/assets/css/react-datetime.css" rel="stylesheet" />
