Remove unused code
Removed unused controllers and repositories.
Merged methods for managing groups into a single repository.
Merged methods for managing favorites into a single repository.
Updated application styles.
Updated submodule for DAIAD@utility client.
Updated model and renamed several properties.

--- a/src/main/resources/public/assets/css/utility/style.css
+++ b/src/main/resources/public/assets/css/utility/style.css
@@ -80,6 +80,18 @@
   display: none;
 }
 
+.Select-placeholder, :not(.Select--multi) > .Select-control .Select-value {
+    color: #000;
+}
+
+.is-disabled > .Select-control .Select-value-label {
+    color: #aaa !important;
+}
+
+.Select, .Select div, .Select input, .Select span {
+    outline: none;
+}
+
 /* Bread crumb */
 
 ul.breadcrumbs-list {
