--- a/src/main/resources/templates/home/default.html
+++ b/src/main/resources/templates/home/default.html
@@ -19,12 +19,13 @@
 		<link href="/assets/lib/font-awesome/css/font-awesome.min.css" rel="stylesheet" />
 		<link href="/assets/lib/react-datetime/react-datetime.css" rel="stylesheet" />
     <link href="/assets/css/home.css" rel="stylesheet" />
-		
-		<script th:inline="javascript">
+
+	<script th:inline="javascript">
         var properties = {
        	    reload: [[${reload}]],
-       	    locale: 'en'
-     	};
+       	    locale: 'en',
+           	captchaKey: [[${googleReCAPTCHASiteKey}]]
+        };
     </script>
 
 </head>
