--- a/src/main/resources/public/assets/css/home.css
+++ b/src/main/resources/public/assets/css/home.css
@@ -324,10 +324,10 @@ label {
 	display: block;
 	position: fixed;
 	top: 35vh;
-  left: 50vw;
+  left: 46vw;
 	width: 80px;
 	height: 80px;
-  z-index: 100;
+  z-index: 2000;
 	animation: counter-spin 0.8s linear infinite;
 }
 
@@ -335,10 +335,10 @@ label {
 	display: block;
 	position: fixed;
 	top: 35vh;
-  left: 50vw;
+  left: 46vw;
 	width: 80px;
 	height: 80px;
-  z-index: 100;
+  z-index: 2000;
 	animation: spin 0.8s linear infinite;
 }
 @-moz-keyframes spin { 100% { -moz-transform: rotate(360deg); } }
@@ -670,15 +670,19 @@ div[class^="section."]{
 	padding: 0;
 }
 .notification-list ul li{
+  display: inline-block;
+  height: 100%;
+  width: 100%;
 }
 
 .notification-list ul li a {
-	padding: 2px 10px;
+	padding: 15px;
 	color: #424242; 
 	border-bottom: 1px #9fa1a2 solid;
 	font-weight: normal;
-	float: left;
+  display: inline-block;
 	width: 100%;
+  //min-height:400px;
 }
 
 .primary .notification-list ul li a {
@@ -702,14 +706,18 @@ div[class^="section."]{
 	margin-left: 15px;
 }
 
+.read a:before, .unread a:before {
+  float: left;
+  width: 20px;
+	font-size: 1.5em;
+  line-height: 1.1em;
+}
+
 .unread a:before{
-	font-size: 20px;
 	content: '\2022';
-	margin-right: 6px;
 }
 .read a:before{
-	content: '';
-	margin-right: 10px;
+	content: '\00A0';
 }
 
 .deviceCount{
@@ -872,6 +880,7 @@ div[class^="section."]{
 .modal-body {
   text-align: center;
   padding-bottom: 0;
+  min-height: 80vh;
 }
 
 .modal-footer {
@@ -1169,6 +1178,8 @@ div[class^="section.login"]{
 .navigator-child{
   display: inline-block;
   margin-top: -10px;
+  min-width: 50px;
+  min-height: 50px;
 }
 
 .history-chart {
@@ -1216,7 +1227,7 @@ div[class^="section.login"]{
 }
 
 .session-item{
-  max-height: 75px;
+  //max-height: 75px;
   overflow: hidden;
   border-top: 1px #666 solid;
 }
@@ -1286,8 +1297,24 @@ input[name="amphiro-devices"] {
   padding: 10px 0;
 }
 
+.shower-container {
+  display: flex;
+  flex-direction: column;
+  justify-content: left;
+}
+
 .shower-chart-area {
-  padding-bottom: 20px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  flex-basis: 364px;
+}
+
+.limited-data-text {
+  align-self: center;
+}
+
+.shower-info {
 }
 
 .shower-info .headline {
@@ -1304,6 +1331,24 @@ input[name="amphiro-devices"] {
 .shower-info .headline-user {
   float: right;
 }
+
+.session-item .in-pictures {
+  float: left;
+  width: 78%;
+  margin-left: 20px;
+}
+
+.in-pictures > .picture {
+  float: left;
+  margin-left: 10px;
+  height: 30px;
+}
+.in-pictures > .picture.light-bulb {
+  width: 50px;
+  height: 30px;
+  margin: 0 -10px;
+}
+
 /* Notifications */
 
 .notifications { 
@@ -1313,12 +1358,13 @@ input[name="amphiro-devices"] {
 }
 .notifications-left {
   flex-grow: 1;
+  flex-basis: 475px;
   background: #fff;
 }
 .notifications-right {
   flex-grow: 0;
   flex-shrink: 1;
-  flex-basis: 700px;
+  flex-basis: 600px;
   display: flex;
   padding: 20px;
 }
@@ -1326,6 +1372,16 @@ input[name="amphiro-devices"] {
   display: flex;
   flex-grow: 1;
   flex-direction: column;
+}
+
+div[class^="section.notifications"] .notifications .scrollable {
+	overflow: auto;
+	max-height: 85vh;
+}
+
+div[class^="section.notifications"] .notification-list ul li a {
+  font-size: 1.2em;
+  padding: 25px 20px;
 }
 
 .notification-header {
@@ -1343,7 +1399,7 @@ input[name="amphiro-devices"] {
 .notification-details {
 	margin-top: 50px;
 	font-size: 1.1em;
-  flex-grow: 1;
+  flex-grow: 0;
 }
 .notification-pagination {
   flex-grow: 0;
