added react-ga dependency and pass google analytics ua code from config

--- a/src/main/resources/templates/home/default.html
+++ b/src/main/resources/templates/home/default.html
@@ -25,6 +25,7 @@
 		  reload: [[${reload}]],
 		  locale: 'en',
 		  captchaKey: [[${googleReCAPTCHASiteKey}]],
+      gaCode: [[${googleAnalyticsUACode}]], 
 		  dataApiUseAggregatedData:  [[${dataApiUseAggregatedData}]]
 		};
 
