--- a/src/main/resources/public/assets/css/utility/style.css
+++ b/src/main/resources/public/assets/css/utility/style.css
@@ -54,6 +54,10 @@ search-plusCHARSET "UTF-8";
 	width: 250px;
 	margin-top: 51px;
     background-color: #34495e;
+    position: fixed;
+    left: 0px;
+    top: 0px;
+    overflow-y: auto;
 }
 
 .navbar-static-side li  a {
@@ -77,7 +81,7 @@ search-plusCHARSET "UTF-8";
 }
 
 .Select-menu-outer {
-  z-index: 1000;
+  z-index: 2000;
 }
 
 .select-hide-arrow .Select-control { 
