--- a/src/main/resources/public/assets/css/home.css
+++ b/src/main/resources/public/assets/css/home.css
@@ -1201,6 +1201,10 @@ div[class^="section.login"]{
 .tip-right {
   padding: 5px;
 }
+.ranking .chart {
+  padding-top: 10px;
+}
+
 /* Add widget */
 .add-widget-modal .modal-body {
   padding: 0;
@@ -1669,13 +1673,16 @@ div[class^="section.notifications"] .notification-list ul li .btn-a {
 }
 
 .notification-details {
-	margin-top: 50px;
 	font-size: 1.1em;
   flex-grow: 0;
 }
 
+.tweet {
+}
+
 .acknowledged {
-  width: 100%;
+  width: 20%;
+  float: right;
   text-align: right;
   font-size: 0.8em;
 }
@@ -1686,6 +1693,9 @@ div[class^="section.notifications"] .notification-list ul li .btn-a {
 
 .notification-pagination {
   flex-grow: 0;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
 }
 
 /* Commons */
