--- a/src/main/resources/public/assets/css/home.css
+++ b/src/main/resources/public/assets/css/home.css
@@ -325,6 +325,7 @@ label {
 .error-display {
   position: fixed;
   margin-top: 40vh;
+  text-align: center;
   left: 50%;
   transform: translateX(-50%);
   background: rgba(0,0,0,0.8);
@@ -356,13 +357,15 @@ label {
   flex-direction: column;
   min-height: 100vh;
   height: 100%;
+  min-width: 1040px;
 }
 .site-header {
   flex-grow: 0;
+  display: flex;
+  flex-direction: row;
 	background: #D0EAFA;
-  text-align: center;
   font-size: 1.15em;
-	padding: 5px 0;
+  height:43px;
   font-size: 1.15em; 
 }
 
@@ -495,9 +498,15 @@ div[class^="section."]{
   //color: #2D3580;
 }
 
+.site-header .logo {
+  flex-grow: 1;
+  text-align: center;
+  margin-right: -230px;
+}
+
 .site-header .logo img{
-  margin-bottom: -15px;
 	width: 100px;
+  margin-top: 21px;
 }
 
 .site-header .main-menu{
@@ -544,9 +553,9 @@ div[class^="section."]{
 }
 
 .top-header-right{
-  position: absolute;
-  right: 20px;
-  top: 8px;
+  margin-top: 8px;
+  flex-grow: 0;
+  flex-basis: 230px;
 }
 .top-header-right > div, .top-header-right > a {
   margin-left: 20px;
